k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: mapster
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
