k8s/postgis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgis
  namespace: mapster
spec:
  type: ClusterIP
  selector:
    app: postgis
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
